--- a/style.css
+++ b/style.css
@@ -1,11 +1,58 @@
-.judul{
+.nama{
     color: whitesmoke;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin-left: 200px;
+    /* margin-left: 200px;
+    margin-top: 100px; */
+    position:fixed;
+    left: 200px;
+    top:20px;
     font-size:xx-large;
     font-weight: bolder;
+    text-decoration:wavy;
 }
-.judul:hover{
+.nama:hover{
     background-color: white;
-    color: rgb(13, 0, 128);
+    color: rgb(10, 0, 102);
+}
+.about{
+    color: whitesmoke;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position:fixed;
+    right: 500px;
+    top:35px;
+    font-size:normal;
+    font-weight:normal;
+    text-decoration:wavy;
+}
+.about:hover{
+    background-color: white;
+    color: rgb(10, 0, 102);
+}
+.projects{
+    color: whitesmoke;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position:fixed;
+    right: 400px;
+    top:35px;
+    font-size:normal;
+    font-weight:normal;
+    text-decoration:wavy;
+}
+.projects:hover{
+    background-color: white;
+    color: rgb(10, 0, 102);
+}
+.contacts{
+    color: whitesmoke;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    position:fixed;
+    right: 300px;
+    top:35px;
+    font-size:normal;
+    font-weight:normal;
+    text-decoration:wavy;
+}
+.contacts:hover{
+    background-color: white;
+    color: rgb(10, 0, 102);
 }
